# rl-journey

./: README.md  config.py  pyproject.toml  test.py  test2.py
notebooks/: policy_gradient_cartpole.ipynb  policy_gradient_lunarlander.ipynb  policy_gradient_mountain_car.ipynb  policy_gradient_pendulum.ipynb  reinforce.ipynb  reinforce_acrobot.ipynb  reinforce_cartpole.ipynb  reinforce_lunar_lander.ipynb  reinforce_mountain_car.ipynb  vanilla_policy_gradient.ipynb  vanilla_policy_gradient_pendulum.ipynb  vanilla_policy_gradient_v2.ipynb
notebooks/runs/Sep06_23-55-19_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662501319.Luciens-MBP-001.22653.8
notebooks/runs/Sep06_23-58-35_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662501515.Luciens-MBP-001.22653.9
notebooks/runs/Sep07_13-22-50_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662549770.Luciens-MBP-001.22653.10
notebooks/runs/Sep07_13-27-16_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662550036.Luciens-MBP-001.22653.11
notebooks/runs/Sep07_13-28-15_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662550095.Luciens-MBP-001.22653.12
notebooks/runs/Sep07_13-42-42_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662550962.Luciens-MBP-001.22653.13
notebooks/runs/Sep07_13-43-06_Luciens-MBP-001_PG_CP_Gamma=0.99,LR=0.01,BS=64/: events.out.tfevents.1662550986.Luciens-MBP-001.22653.14
videos/reinforce/CartPole-v1/: rl-video-episode-0.meta.json
(+38 files in other folders)
