[tool.poetry]
name = "rl-journey"
version = "0.1.0"
description = ""
authors = ["Lucien Martin-Gaffé <lucien.martingaffe@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.4"
jupyter = "^1.0.0"
torch = "1.12.0"
gym = "^0.25.1"
matplotlib = "^3.5.2"
pygame = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
