[tool.poetry]
name = "rl-journey"
version = "0.1.0"
description = ""
authors = ["Lucien Martin-Gaffé <lucien.martingaffe@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.4"
jupyter = "^1.0.0"
torch = "1.12.1"
gym = {extras = ["box2d"], version = "^0.26.0"}
matplotlib = "^3.5.2"
torchvision = "^0.13.1"
tensorboard = "^2.10.0"
torch-tb-profiler = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
